styles.css
h1 {
  color: #d8ffa2;
  font-family: "Editorial New";
  font-size: 36px;
  line-height: 1.2;
}
/* CUSTOM SCROLLER STYLES */

/* These styles set up a sticky graphic next to the text,
rather than behind the text which is the default behavior */

.idyll-scroll-text .idyll-text-container {
  width: 100%;
  margin: 0;
}

.idyll-scroll-text .idyll-step {
  background: rgba(34, 34, 34, 0.95);
  color: #adadad;
  box-shadow: none;
}
.idyll-step p {
  color: #adadad;
}

.idyll-sticky-side-scroll {
  display: flex;
  margin-top: 0;
  margin-bottom: 0;
  width: 100vw;
  padding: 0 50px;
}

.idyll-sticky-side-scroll .idyll-scroll-graphic {
  flex: 1;
}

.idyll-sticky-side-scroll .idyll-text-container {
  flex: 1;
  margin: 0 50px 0 0;
}

.idyll-sticky-side-scroll .idyll-scroll-text {
  padding: 0;
}

/* put much less space between steps, compared to full-screen scroller */
.idyll-sticky-side-scroll .idyll-scroll-text .idyll-step {
  padding: 20vh 0;
  margin: 0;
  opacity: 30%; /*bring opacity up only when step is active*/
}

.idyll-sticky-side-scroll .idyll-scroll-text .idyll-step.active-step {
  opacity: 100%;
}

.idyll-sticky-side-scroll .idyll-scroll-text .idyll-step:first-of-type {
  margin-top: 20vh;
}

.idyll-sticky-side-scroll .idyll-scroll-text .idyll-step:last-of-type {
  margin-bottom: 20vh;
}

/* Give more space between text and vis on superwide screens.
   Not particularly principled, but it gets the job done. */
@media only screen and (min-width: 1280px) {
  .treemap-container {
    padding-left: 15%;
  }
}

svg.emissions-treemap {
  max-width: 500px;
  max-height: calc(100vh - 150px);
}

.idyll-scroll-graphic > div {
  padding-left: 20px;
  padding-right: 20px;
}

.idyll-step h1 {
  margin-top: 10px;
}

.intro-scene-wrapper {
  cursor: grab;
}

.intro-scene-wrapper.dragging {
  cursor: grabbing;
}

.outro-scene-title,
.outro-scene-caption {
  color: rgba(34, 34, 34);
  margin: 1rem;
  padding: 1rem;
  /* based on <Html/> zIndexRange [950,0] */
  z-index: 960;
}

.outro-scene-title {
  position: absolute;
  top: 0;
  left: 0;
  background: #d8ffa2;
  width: 20%;
}

.outro-scene-title h5 {
  margin-top: 0;
}

.outro-scene-caption {
  position: absolute;
  bottom: 0;
  right: 0;
  font-size: 14px;
  line-height: 16px;
  font-weight: 400;
  background: #adadad;
  width: 30%;
}

.outro-scene-caption-body {
  border-top: 1px solid #2c2c2c;
  padding-top: 8px;
  margin-top: 8px;
}

.outro-scene-caption-title {
  font-weight: 600;
}

.outro-scene-caption-controls {
  margin-top: 16px;
  display: flex;
  justify-content: space-between;
}

.outro-scene-caption-controls button {
  margin: unset;
  padding: 0.2em 0.8em;
  border-radius: 1em;
}

button.outro-scene-label {
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  background: #adadad;
  color: rgba(34, 34, 34);
  padding: 0.4em 0.8em;
  border-radius: 1em;
  text-transform: unset;
}

button.outro-scene-label.outro-scene-label-active {
  background: #d8ffa2;
}

canvas:focus {
  outline: none;
}

.parametric-header-metadata-component {
  flex-wrap: wrap;
}

/* Hack for author names in header */
.parametric-header-metadata-component > div > * {
  margin-right: 0.5em;
}

